--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src='https://unpkg.com/vue@3/dist/vue.global.js'></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue To Do List</title>
 </head>
 <body>
+    <div id="app">
+        <div class="container ml-5">
+            <h1 class="mb-5">{{ title }}</h1>
+            <div class="row"></div>
+        </div>
+    </div>
     <script type="text/javascript" src="./js/script.js" defer></script>
 </body>
 </html>
