--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src='https://unpkg.com/vue@3/dist/vue.global.js'></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +10,27 @@
 </head>
 <body>
     <div id="app">
-        <div class="container ml-5">
+        <div class="container mt-5">
             <h1 class="mb-5">{{ title }}</h1>
-            <div class="row"></div>
+            <div class="row">
+                <div class="col-4">
+                    <h2>Task da eseguire</h2>
+                    <ul>
+                        <li>
+                            Task 1 
+                            <span class="action">
+                                <i class="fa-solid fa-check"></i>
+                            </span>
+                        </li>
+                        <li>Task 2</li>
+                        <li>Task 3</li>
+                    </ul>
+                </div>
+                <div class="col-4">
+                    <h2>Task eseguite</h2>
+                </div>
+                <div class="col-4"></div>
+            </div>
         </div>
     </div>
     <script type="text/javascript" src="./js/script.js" defer></script>
