--- a/index.html
+++ b/index.html
@@ -6,24 +6,38 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src='https://unpkg.com/vue@3/dist/vue.global.js'></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Vue To Do List</title>
 </head>
 <body>
     <div id="app">
         <div class="container mt-5">
-            <h1 class="mb-5">{{ title }}</h1>
+            <h1 class="mb-5 text-center">{{ title }}</h1>
             <div class="row">
                 <div class="col-4">
                     <h2>Task da eseguire</h2>
-                    <ul>
-                        <li>
-                            Task 1 
-                            <span class="action">
+                    <ul class="p-0">
+                        <li class="task p-3">
+                            <div>Task 1 </div>
+                            <div class="action">
                                 <i class="fa-solid fa-check"></i>
-                            </span>
+                                <i class="fa-solid fa-trash"></i>
+                            </div>
                         </li>
-                        <li>Task 2</li>
-                        <li>Task 3</li>
+                        <li class="task p-3">
+                            <div>Task 2 </div>
+                            <div class="action">
+                                <i class="fa-solid fa-check"></i>
+                                <i class="fa-solid fa-trash"></i>
+                            </div>
+                        </li>
+                        <li class="task p-3">
+                            <div>Task 3 </div>
+                            <div class="action">
+                                <i class="fa-solid fa-check"></i>
+                                <i class="fa-solid fa-trash"></i>
+                            </div>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-4">
