--- a/index.html
+++ b/index.html
@@ -24,28 +24,29 @@
                             <div>Task 1 </div>
                             <div class="action">
                                 <i class="fa-solid fa-check text-success ms-3"></i>
-                                <i class="fa-solid fa-trash text-danger ms-3"></i>
+                                <i class="fa-solid fa-xmark text-danger ms-3"></i>
                             </div>
                         </li>
                         <li class="task p-3 mb-3">
                             <div>Task 2 </div>
                             <div class="action">
                                 <i class="fa-solid fa-check text-success ms-3"></i>
-                                <i class="fa-solid fa-trash text-danger ms-3"></i>
+                                <i class="fa-solid fa-xmark text-danger ms-3"></i>
                             </div>
                         </li>
                         <li class="task p-3 mb-3">
                             <div>Task 3 </div>
                             <div class="action">
                                 <i class="fa-solid fa-check text-success ms-3"></i>
-                                <i class="fa-solid fa-trash text-danger ms-3"></i>
+                                <i class="fa-solid fa-xmark text-danger ms-3"></i>
                             </div>
                         </li>
                         <li class="task p-3 mb-3">
                             <div>Task 4 </div>
                             <div class="action">
                                 <i class="fa-solid fa-check text-success ms-3"></i>
-                                <i class="fa-solid fa-trash text-danger ms-3"></i>
+                                <i class="fa-solid fa-xmark text-danger ms-3"></i>
+                                <i class=""></i>
                             </div>
                         </li>
                     </ul>
@@ -57,7 +58,7 @@
                             <div>Task 1</div>
                             <div class="action">
                                 <i class="fa-solid fa-arrows-rotate text-warning ms-3"></i>
-                                <i class="fa-solid fa-trash text-danger ms-3"></i>
+                                <i class="fa-solid fa-xmark text-danger ms-3"></i>
                             </div>
                         </li>
                     </ul>
