--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
             <h1 class="mb-5 text-center">{{ title }}</h1>
             <h2 class="mb-3">Crea nuove Task</h2>
             <input v-model="newTask.name" type="text" class="form-control mb-3" id="new-task">
-            <button @click="createTask" class="btn btn-success mb-3">Salva <i class="fa-regular fa-floppy-disk"></i></button>
+            <button @click="createTask()" class="btn btn-success mb-3">Salva <i class="fa-regular fa-floppy-disk"></i></button>
             <div class="row">
                 <div class="col-4">
                     <h3>Task da eseguire</h3>
                     <ul class="p-0">
-                        <li v-for="task in tasks" class="task p-3 mb-3" v-show="task.done == false">
+                        <li v-for="(task, index) in tasks" class="task p-3 mb-3" v-show="task.done == false">
                             <div>{{ task.name }} </div>
                             <div class="action">
-                                <i class="fa-solid fa-check text-success ms-3"></i>
-                                <i class="fa-solid fa-xmark text-danger ms-3"></i>
+                                <i @click="setTask" class="fa-solid fa-check text-success ms-3"></i>
+                                <i @click="deleteTask(index)" class="fa-solid fa-xmark text-danger ms-3"></i>
                             </div>
                         </li>
                     </ul>
@@ -32,16 +32,15 @@
                 <div class="col-4">
                     <h3>Task eseguite</h3>
                     <ul class="p-0">
-                        <li  v-for="task in tasks" class="task p-3 mb-3"  v-show="task.done">
+                        <li  v-for="(task, index) in tasks" class="task p-3 mb-3"  v-show="task.done">
                             <div>{{ task.name }}</div>
                             <div class="action">
                                 <i class="fa-solid fa-arrows-rotate text-warning ms-3"></i>
-                                <i class="fa-solid fa-xmark text-danger ms-3"></i>
+                                <i @click="deleteTask(index)" class="fa-solid fa-xmark text-danger ms-3"></i>
                             </div>
                         </li>
                     </ul>
                 </div>
-                <div class="col-4"></div>
             </div>
         </div>
     </div>
