--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <li v-for="(task, index) in tasks" class="task p-3 mb-3" v-show="task.done == false">
                             <div>{{ task.name }} </div>
                             <div class="action">
-                                <i @click="setTask" class="fa-solid fa-check text-success ms-3"></i>
+                                <i @click="setTask(index)" class="fa-solid fa-check text-success ms-3"></i>
                                 <i @click="deleteTask(index)" class="fa-solid fa-xmark text-danger ms-3"></i>
                             </div>
                         </li>
@@ -35,7 +35,7 @@
                         <li  v-for="(task, index) in tasks" class="task p-3 mb-3"  v-show="task.done">
                             <div>{{ task.name }}</div>
                             <div class="action">
-                                <i class="fa-solid fa-arrows-rotate text-warning ms-3"></i>
+                                <i @click="setTaskRot(index)" class="fa-solid fa-arrows-rotate text-warning ms-3"></i>
                                 <i @click="deleteTask(index)" class="fa-solid fa-xmark text-danger ms-3"></i>
                             </div>
                         </li>
